data/derived/fa15/progs/unify/prog0516.ml.out
Characters 8-17:
  let _ = (pipe []) 3;;
          ^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
